scripts/nullness/wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8.txt
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:124: error: (dereference.of.nullable) $$ 1 $$ antibodies $$ ( 3690, 3700 ) $$ dereference of possibly-null reference antibodies
		for (int i = 0; i < antibodies.length; i++) {
		                    ^
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:152: error: (accessing.nullable) $$ 1 $$ bestSegment $$ ( 4927, 4938 ) $$ accessing a possibly-null array bestSegment
			antibody[offset + i] = bestSegment[i];
			                       ^
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:219: error: (argument) $$ 4 $$ arg1 $$ IJGAPFactory.getCloneHandlerFor $$ null (NullType) $$ @Initialized @NonNull Class</*RAW*/> $$ ( 8798, 8802 ) $$ incompatible argument for parameter arg1 of IJGAPFactory.getCloneHandlerFor.
            getCloneHandlerFor(selectedChromosome, null);
                                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:223: error: (argument) $$ 4 $$ arg1 $$ IHandler.perform $$ null (NullType) $$ @Initialized @NonNull Class</*RAW*/> $$ ( 8950, 8954 ) $$ incompatible argument for parameter arg1 of IHandler.perform.
                selectedChromosome, null, null);
                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:223: error: (argument) $$ 4 $$ arg2 $$ IHandler.perform $$ null (NullType) $$ @Initialized @NonNull Object $$ ( 8956, 8960 ) $$ incompatible argument for parameter arg2 of IHandler.perform.
                selectedChromosome, null, null);
                                          ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:416: error: (contracts.conditional.postcondition) $$ 4 $$ equals $$ true $$ o is @Nullable $$ o is @NonNull $$ ( 15595, 15607 ) $$ conditional postcondition is not satisfied when equals returns true.
    return true;
    ^
  found   : o is @Nullable
  required: o is @NonNull
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:121: error: (argument) $$ 4 $$ arg1 $$ IJGAPFactory.getCloneHandlerFor $$ null (NullType) $$ @Initialized @NonNull Class</*RAW*/> $$ ( 3853, 3857 ) $$ incompatible argument for parameter arg1 of IJGAPFactory.getCloneHandlerFor.
				ICloneHandler cloner = getConfiguration().getJGAPFactory().getCloneHandlerFor(selectedChromosome, null);
				                                                                                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:124: error: (argument) $$ 4 $$ arg1 $$ IHandler.perform $$ null (NullType) $$ @Initialized @NonNull Class</*RAW*/> $$ ( 3973, 3977 ) $$ incompatible argument for parameter arg1 of IHandler.perform.
						IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
						                                                                      ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:124: error: (argument) $$ 4 $$ arg2 $$ IHandler.perform $$ null (NullType) $$ @Initialized @NonNull Object $$ ( 3979, 3983 ) $$ incompatible argument for parameter arg2 of IHandler.perform.
						IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
						                                                                            ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:257: error: (contracts.conditional.postcondition) $$ 4 $$ equals $$ true $$ o is @Nullable $$ o is @NonNull $$ ( 7588, 7690 ) $$ conditional postcondition is not satisfied when equals returns true.
		return (this.chromosomes.equals(other.chromosomes)) &&
		^
  found   : o is @Nullable
  required: o is @NonNull
Note: ../original/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
